# cmsc398z-sma

./: .gitguardian.yaml  .gitignore  .submit  .submitIgnore  ARCHITECTURE-GUIDE-phase1.md  ARCHITECTURE-GUIDE-phase2.md  ARCHITECTURE.md  CLAUDE.md  DEV-PATTERNS.md  README.md  REFLECTIONS.md  SETUP-AUTHENTICATION.md  TODO-SHARED-MIGRATION.md  TODO-phase1.md  TODO-phase2.md  TROUBLESHOOTING.md  deployment-guide.md
phase1/: .env.example  .gitignore  DECISIONS-MADE-phase1.md  pyproject.toml
phase1/dev_scripts/: README.md
phase2/: DECISIONS-MADE-phase2.md
phase2/backend/: .env.example  .gitignore  README.md  pyproject.toml
phase2/dev_scripts/: README.md
phase2/frontend/: .gitignore  README.md  package.json
shared/: invites.txt
shared/static/: README.md
