[project]
name = "social-media-flask"
version = "0.1.0"
description = "Phase 1: Flask monolithic social media application"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# For Google OAuth authentication
google-oauth = [
    "authlib>=1.3.0",
    "requests>=2.31.0",
]

# For email magic link authentication
email-auth = [
    "flask-mail>=0.9.1",
    "itsdangerous>=2.1.2",
]

# For image uploads
images = [
    "pillow>=10.0.0",
]

# All optional features
all = [
    "authlib>=1.3.0",
    "requests>=2.31.0",
    "flask-mail>=0.9.1",
    "itsdangerous>=2.1.2",
    "pillow>=10.0.0",
]
