[project]
name = "social-media-api"
version = "0.1.0"
description = "Phase 2: REST API backend for social media application"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",  # For JWT tokens
    "passlib[bcrypt]>=1.7.4",            # For password hashing (if needed)
    "python-multipart>=0.0.6",           # For form data
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",  # For testing FastAPI
]
